testsuite/tests/templates/basic/bad_instance_arg_name_not_found.ml
module Monoid_utils_of_banana =
  Monoid_utils(Banana)(List_monoid) [@jane.non_erasable.instances]
